# cbba-mobility

app/: app.json  babel.config.js  package-lock.json  package.json
app/app/: _layout.tsx
app/app/(tabs)/: _layout.tsx  index.tsx  record.tsx
app/components/: DatabaseProvider.tsx  header.tsx  swipe-switch.tsx
app/components/ui/: collapsible.tsx
app/db/: schema.ts
app/drizzle/: 0000_exotic_scarlet_witch.sql  migrations.js
app/drizzle/meta/: 0000_snapshot.json  _journal.json
app/hooks/: use-theme-color.ts
app/lib/: db-ref.ts  db.ts
app/services/: api.ts  background-location.ts  line-cache.ts  recording-store.ts  sync.ts
app/styles/: index.ts  record.ts
docs/.makemd/: fileCache.mdc  superstate.mdc
docs/Ingeniería del proyecto/Desarrollo/: Cursor Planning  Planning.md
docs/Pruebas de calidad/: Automated tests.md
docs/Tech docs/: expo-sdk-background-tasks.md  expo-sdk-location.md  expo-sdk-notifications.md  expo-sdk-sensors.md  expo-sdk-syroscope.md  expo-sdk-task-manager.md
server/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  database.py  docker-compose.yml  main.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 001_initial_routes.py  002_users_and_recordings.py  0775b27e0935_remove_routes_table.py  9bf8685c237f_initial.py  remove_users.py
server/models/: __init__.py  line.py  recording.py  route.py  user.py
server/routes/: __init__.py  lines.py  recordings.py  routes.py
server/tests/: conftest.py  test_lines.py  test_recordings.py
