[project]
name = "server"
version = "0.1.0"
description = "Open Transit API server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "ruff>=0.9.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.10",
    "geoalchemy2>=0.15.0",
    "shapely>=2.0.0",
    "alembic>=1.14.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",  # Required for FastAPI TestClient
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This is a FastAPI application, not a library - no packages to distribute
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"